--- a/gccp-back/package.json
+++ b/gccp-back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "knex": "^2.2.0"
+    "knex": "^2.2.0",
+    "pg": "^8.8.0",
+    "postgres": "^3.2.4",
+    "sqlite": "^4.1.2"
   }
 }
