--- a/gccp-back/package.json
+++ b/gccp-back/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev":"nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,9 @@
     "pg": "^8.8.0",
     "postgres": "^3.2.4",
     "sqlite": "^4.1.2"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.19"
   }
 }
